[gd_scene load_steps=10 format=3 uid="uid://b4y2530a4qslb"]

[ext_resource type="Script" path="res://scripts/game/GameScene.gd" id="1"]
[ext_resource type="Script" path="res://scripts/game/managers/SyncManager.gd" id="2_kp2am"]
[ext_resource type="Script" path="res://scripts/game/managers/ObjectManager.gd" id="3_6ip3k"]
[ext_resource type="Script" path="res://scripts/game/managers/HUDManager.gd" id="4_k7mvy"]
[ext_resource type="Script" path="res://scripts/game/renderers/NoteRenderer.gd" id="4_tvxv6"]
[ext_resource type="Texture2D" uid="uid://d1mkaxv1bs88f" path="res://assets/images/grid_outer.png" id="5_ub0p0"]

[sub_resource type="Environment" id="Environment_fuarx"]
resource_local_to_scene = true
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_6xl0w"]
lightmap_size_hint = Vector2i(5, 5)
flip_faces = true
size = Vector2(0.6, 0.6)
orientation = 2

[sub_resource type="MultiMesh" id="MultiMesh_t5tpd"]
transform_format = 1
mesh = SubResource("PlaneMesh_6xl0w")

[node name="GameScene" type="Node3D"]
top_level = true
script = ExtResource("1")
sync_manager_path = NodePath("SyncManager")
object_manager_path = NodePath("ObjectManager")
hud_manager_path = NodePath("HUDManager")
camera_path = NodePath("Camera")
environment_path = NodePath("Environment")

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fuarx")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -3)
current = true
fov = 70.0

[node name="SyncManager" type="Node" parent="."]
process_priority = 2
script = ExtResource("2_kp2am")
audio_player_path = NodePath("../Music")

[node name="ObjectManager" type="Node" parent="."]
process_mode = 3
process_priority = 1
script = ExtResource("3_6ip3k")
origin_path = NodePath("../Origin")

[node name="NoteRenderer" type="MultiMeshInstance3D" parent="ObjectManager"]
multimesh = SubResource("MultiMesh_t5tpd")
script = ExtResource("4_tvxv6")

[node name="HUDManager" type="Node" parent="."]
script = ExtResource("4_k7mvy")

[node name="Origin" type="Node3D" parent="."]
process_mode = 1

[node name="HUD" type="Node3D" parent="Origin"]

[node name="Grid" type="Sprite3D" parent="Origin/HUD"]
pixel_size = 0.0025
texture = ExtResource("5_ub0p0")

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = &"Game Music"
